# embree

./: Cargo.toml  build.rs
examples/curve_geometry/: Cargo.toml
examples/curve_geometry/src/: main.rs
examples/instancing/: Cargo.toml
examples/instancing/src/: main.rs
examples/obj_ao_parallel/: Cargo.toml
examples/obj_ao_parallel/src/: main.rs
examples/obj_viewer/: Cargo.toml
examples/obj_viewer/src/: main.rs
examples/quad/: Cargo.toml
examples/quad/src/: main.rs
examples/subdiv/: Cargo.toml
examples/subdiv/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: aabb.rs  camera.rs  display.rs  lib.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
examples/triangle_geometry/: Cargo.toml
examples/triangle_geometry/src/: main.rs
src/: bezier_curve.rs  bspline_curve.rs  buffer.rs  catmull_rom_curve.rs  geo.rs  geometry.rs  hermite_curve.rs  instance.rs  lib.rs  linear_curve.rs  quad_mesh.rs  ray.rs  ray_packet.rs  ray_stream.rs  scene.rs  soa_ray.rs  subdiv_mesh.rs  triangle_mesh.rs
