[package]
name = "support"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24.0"
arcball = { git = "https://github.com/alexantoshuk/arcball" }
ultraviolet = "0.9"
clock_ticks = "0.1.1"

[dependencies.glium]
version = "0.32"
default = ["glutin"]

